[gd_scene load_steps=10 format=3 uid="uid://dl4sj2ilqlogo"]

[ext_resource type="Script" uid="uid://wik6k2m4qu2i" path="res://scenes/ui/options menu/options_menu.gd" id="1_n5c5q"]
[ext_resource type="Shader" uid="uid://bjw60mcrtyypl" path="res://resources/shaders/moving_tiles.gdshader" id="2_jagud"]
[ext_resource type="Texture2D" uid="uid://do3tctgujpdcm" path="res://resources/graphics/universal/checkerboard_64px.png" id="3_alhw5"]
[ext_resource type="PackedScene" uid="uid://d15jrurv3hpew" path="res://scenes/ui/_components/better label/better_label.tscn" id="4_a10t4"]
[ext_resource type="Script" uid="uid://dc73hgd1bvd7k" path="res://scenes/ui/_components/better button/better_button.gd" id="4_qmlxg"]
[ext_resource type="Script" uid="uid://dwvqg1o3ss785" path="res://scenes/ui/_components/better label/better_label.gd" id="4_rvipn"]
[ext_resource type="FontFile" uid="uid://bgbee3o3d7sds" path="res://resources/fonts/more_15.ttf" id="5_2tk7y"]
[ext_resource type="Script" uid="uid://qt4br7lflb6u" path="res://scenes/ui/_components/better h slider/better_h_slider.gd" id="6_eege3"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_155j2"]
shader = ExtResource("2_jagud")
shader_parameter/speed = 0.5

[node name="OptionsMenu" type="CanvasLayer"]
script = ExtResource("1_n5c5q")

[node name="Background" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_155j2")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_alhw5")
stretch_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 48

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
alignment = 1

[node name="OptionsLabel" parent="MarginContainer/VBoxContainer" instance=ExtResource("4_a10t4")]
clip_contents = false
layout_mode = 2
size_flags_horizontal = 0
theme_override_fonts/normal_font = ExtResource("5_2tk7y")
theme_override_font_sizes/normal_font_size = 32
text = "[wave amp=30.0 freq=5.0 connected=1]OPTIONS[/wave]"
fit_content = true
autowrap_mode = 0

[node name="OptionsVBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
alignment = 1

[node name="FullscreenHBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/OptionsVBoxContainer"]
layout_mode = 2
alignment = 1

[node name="FullscreenLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer/OptionsVBoxContainer/FullscreenHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
bbcode_enabled = true
text = "fullscreen"
fit_content = true
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("4_rvipn")

[node name="FullscreenButton" type="Button" parent="MarginContainer/VBoxContainer/OptionsVBoxContainer/FullscreenHBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(28, 0)
layout_mode = 2
toggle_mode = true
text = "on
"
script = ExtResource("4_qmlxg")
hover_color = Color(0.929412, 0.494118, 0.211765, 1)

[node name="VSyncHBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/OptionsVBoxContainer"]
layout_mode = 2
alignment = 1

[node name="VSyncLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer/OptionsVBoxContainer/VSyncHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
bbcode_enabled = true
text = "vsync"
fit_content = true
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("4_rvipn")

[node name="VSyncButton" type="Button" parent="MarginContainer/VBoxContainer/OptionsVBoxContainer/VSyncHBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(28, 0)
layout_mode = 2
toggle_mode = true
text = "on"
script = ExtResource("4_qmlxg")
hover_color = Color(0.254902, 0.619608, 0.929412, 1)

[node name="MusicHBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/OptionsVBoxContainer"]
layout_mode = 2
alignment = 1

[node name="MusicLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer/OptionsVBoxContainer/MusicHBoxContainer"]
custom_minimum_size = Vector2(0, 22)
layout_mode = 2
size_flags_horizontal = 2
bbcode_enabled = true
text = "music"
fit_content = true
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("4_rvipn")

[node name="MusicSlider" type="HSlider" parent="MarginContainer/VBoxContainer/OptionsVBoxContainer/MusicHBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_vertical = 4
value = 50.0
script = ExtResource("6_eege3")
hover_color = Color(0.313726, 0.819608, 0.431373, 1)
metadata/_custom_type_script = "uid://qt4br7lflb6u"

[node name="SoundHBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/OptionsVBoxContainer"]
layout_mode = 2
alignment = 1

[node name="SoundLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer/OptionsVBoxContainer/SoundHBoxContainer"]
custom_minimum_size = Vector2(0, 22)
layout_mode = 2
size_flags_horizontal = 2
bbcode_enabled = true
text = "sound"
fit_content = true
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("4_rvipn")

[node name="SoundSlider" type="HSlider" parent="MarginContainer/VBoxContainer/OptionsVBoxContainer/SoundHBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_vertical = 4
value = 50.0
script = ExtResource("6_eege3")
hover_color = Color(0.933333, 0.752941, 0.258824, 1)
metadata/_custom_type_script = "uid://qt4br7lflb6u"

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer/OptionsVBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "back"
script = ExtResource("4_qmlxg")
hover_color = Color(0.870588, 0.262745, 0.262745, 1)
metadata/_custom_type_script = "uid://dc73hgd1bvd7k"
